--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,8 @@
       content="Web site created using create-react-app"
     />
     <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Dictionary App</title>
-      </head>
-      <body>
-        <h1>Hello, search a word</h1>
-      </body>
-    </html>
+    <!DOCTYPE html>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
